--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   publish = "public"
   command = "npm run build"
+  base = "."
+  functions = "./functions"
   
 [build.environment]
   NODE_VERSION = "10"
